--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,8 +45,6 @@
         android:id="@+id/left_bracket"
         style="@style/operation_style"
         android:layout_below="@+id/add"
-        android:layout_toEndOf="@+id/reset"
-        android:layout_toRightOf="@+id/reset"
         android:text="(" />
 
     <Button
@@ -68,23 +66,23 @@
         android:id="@+id/resultTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/divide"
-        android:layout_toRightOf="@+id/divide"
-        android:padding="30sp"
+        android:layout_below="@+id/multiply"
+        android:layout_toEndOf="@+id/right_bracket"
+        android:layout_toRightOf="@+id/right_bracket"
+        android:padding="8sp"
         android:textColor="@color/colorAccent"
-        android:textSize="30sp"
-        tools:text="222" />
+        android:textSize="20sp"
+        tools:text="21122" />
 
     <EditText
         android:id="@+id/input_field"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/left_bracket"
+        android:layout_below="@+id/resultTextView"
         android:background="#fff"
         android:inputType="numberDecimal"
         android:maxLines="1"
         android:padding="16sp"
-        android:text="0"
         android:textColor="#000"
         android:textSize="25sp"
         tools:text="30000" />
